--- a/client_1_2_mcp.ipynb
+++ b/client_1_2_mcp.ipynb
@@ -10,9 +10,9 @@
     "from langfuse import Langfuse\n",
     "\n",
     "langfuse = Langfuse(\n",
-    "  secret_key=\"sk-lf-8581db31-f2ca-4f3d-82b8-ab5f873132da\",\n",
-    "  public_key=\"pk-lf-ca4bf373-d6d1-4c99-9133-cedbe6ff9d5d\",\n",
-    "  host=\"https://us.cloud.langfuse.com\"\n",
+    "  secret_key=\"\",\n",
+    "  public_key=\"\",\n",
+    "  host=\"https://\"\n",
     ")"
    ]
   },
